# gh-release-dl

./: .gitignore  README.md  pyproject.toml  setup.py
gh_release_dl/: main.py
