[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh_release_dl"
version = "0.0.1"
description = "A CLI tool to download installers from GitHub releases"
authors = [
    {name = "ShinChven", email = "shinchven@gmail.com"},
]
dependencies = [
    "requests",
    "inquirer",
    "tqdm",
    "argparse",
]
requires-python = ">=3.7"
urls = {repository = "https://github.com/ShinChven/gh-release-dl.git"}

[project.scripts]
gh-release-dl = "gh_release_dl.main:gh_release_dl"

[tool.setuptools.packages.find]
where = ["."]
